RESOLVED FIXED287116
Crashes found from deleteModelPlayer() call from HTMLModelElement's destructor when running model layout tests
https://bugs.webkit.org/show_bug.cgi?id=287116
Summary Crashes found from deleteModelPlayer() call from HTMLModelElement's destructo...
Aleksei Marchenko
Reported 2025-02-05 14:04:42 PST
model-element layout tests crash
Attachments
Aleksei Marchenko
Comment 1 2025-02-05 14:04:43 PST
Aleksei Marchenko
Comment 2 2025-02-05 14:06:29 PST
EWS
Comment 3 2025-02-06 09:56:16 PST
Committed 289944@main (ea638cce75c0): <https://commits.webkit.org/289944@main> Reviewed commits have been landed. Closing PR #40081 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.