Crashes found from deleteModelPlayer() call from HTMLModelElement's destructor when running model layout tests https://bugs.webkit.org/show_bug.cgi?id=287116 rdar://144160812

Reviewed by Ada Chan.

When running back to back tests in some cases document().page()
might not be available during deleteModelPlayer() call.
This change verifies if page() is still valid.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::deleteModelPlayer):

Canonical link: https://commits.webkit.org/289944@main